5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1573_2896.log
== TEST (2019-03-29 19:57:28) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = pedro lucas

# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 4
    var = pedro lucas
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:57:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = pedro lucas

# Impressao de saidas
print('var')
-- ERROR:
File "XXXX", line 4
    var = pedro lucas
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:11:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: pedro lucas
				")

# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 4
    var = input("Digite o nome: pedro lucas
                                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:12:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var=input("Digite o nome: pedro lucas")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:12:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var=input("Digite o nome: pedro lucas")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 20:12:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var=input("Digite o nome: pedro lucas")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.139207
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 13:36:28) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var=input("Digite o nome: pedro lucas")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 13:36:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var=input("Digite o nome: pedro lucas")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.144672
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
